add_executable                  (bottleneck-distance bottleneck-distance.cpp)
target_link_libraries           (bottleneck-distance ${libraries} ${Boost_PROGRAM_OPTIONS_LIBRARY})

add_subdirectory            (alphashapes)
#add_subdirectory           (ar-vineyard)
add_subdirectory            (cech-complex)
add_subdirectory            (consistency)
add_subdirectory            (cohomology)
add_subdirectory            (fitness)
add_subdirectory            (pl-functions)
add_subdirectory            (triangle)
add_subdirectory            (poincare)
add_subdirectory            (rips)
add_subdirectory            (filtration)
add_subdirectory            (homology-zigzags)
